Настройка кнопок EnvyBox

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/last.css">
 </head>
-
+<!-- TODO: Настроить все кнопки EnvyBox -->
+<!-- TODO: Настроить счётчики посещаемости -->
+<!-- TODO: Протестировать адаптивность на устройствах -->
+<!-- TODO: Оптимизировать изображения и скорость загрузки сайта -->
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgba(0, 0, 38,0.8)">
         <div class="container-fluid">
@@ -123,11 +126,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div role="button" class="link-universal link-universal--u-iumujpz7n" id="btn-callback">
-                                <div class="text text--u-ijz7a15pf">
-                                    <span class="text-block-wrap-div">Заказать обратный звонок</span>
+                            <a href="#callbackwidget">
+                                <div role="button" class="link-universal link-universal--u-iumujpz7n" id="btn-callback">
+                                    <div class="text text--u-ijz7a15pf">
+                                        <span class="text-block-wrap-div">Заказать обратный звонок</span>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
+                            
 
                         </div>
                     </div>
@@ -232,7 +238,7 @@
                                                 style="font-weight:bolder">890</span> р.</span>
                                     </div>
                                     <div class="div div--u-ijesjq95y" id="ijesjq95y_0">
-                                        <a href="#" class="link-universal link-universal--u-ivy29dt3r" id="ivy29dt3r_0">
+                                        <a href="#callbackwidget" class="link-universal link-universal--u-ivy29dt3r" id="ivy29dt3r_0">
                                             <div class="text text--u-iafowutg1" id="iafowutg1_0">
                                                 <span class="text-block-wrap-div">Забронировать</span>
                                             </div>
@@ -1242,7 +1248,7 @@
                                             </div>
                                         </div>
                                         <div class="div div--u-iaq4xhp2v" id="iaq4xhp2v_0">
-                                            <a href="#" class="link-universal link-universal--u-i4i2a9van"
+                                            <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van"
                                                 id="i4i2a9van_0">
                                                 <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                                                     <span class="text-block-wrap-div">Забронировать</span>
@@ -2279,7 +2285,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2325,7 +2331,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2375,7 +2381,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2420,7 +2426,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2463,7 +2469,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2508,7 +2514,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2552,7 +2558,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2603,7 +2609,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2650,7 +2656,7 @@
                 </ul>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2746,7 +2752,7 @@
                 </div>
             </div>
             <div>
-                <a href="#" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
