--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="ru">
 
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(94781496, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/94781496" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Детская игровая комната "Моя радость"</title>
@@ -16,10 +37,9 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/last.css">
 </head>
-<!-- TODO: Настроить все кнопки EnvyBox -->
-<!-- TODO: Настроить счётчики посещаемости -->
 <!-- TODO: Протестировать адаптивность на устройствах -->
 <!-- TODO: Оптимизировать изображения и скорость загрузки сайта -->
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgba(0, 0, 38,0.8)">
         <div class="container-fluid">
@@ -133,7 +153,7 @@
                                     </div>
                                 </div>
                             </a>
-                            
+
 
                         </div>
                     </div>
@@ -238,7 +258,8 @@
                                                 style="font-weight:bolder">890</span> р.</span>
                                     </div>
                                     <div class="div div--u-ijesjq95y" id="ijesjq95y_0">
-                                        <a href="#callbackwidget" class="link-universal link-universal--u-ivy29dt3r" id="ivy29dt3r_0">
+                                        <a href="#callbackwidget" class="link-universal link-universal--u-ivy29dt3r"
+                                            id="ivy29dt3r_0">
                                             <div class="text text--u-iafowutg1" id="iafowutg1_0">
                                                 <span class="text-block-wrap-div">Забронировать</span>
                                             </div>
@@ -2285,7 +2306,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2331,7 +2353,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2381,7 +2404,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2426,7 +2450,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2469,7 +2494,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2514,7 +2540,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2558,7 +2585,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2609,7 +2637,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2656,7 +2685,8 @@
                 </ul>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
@@ -2752,7 +2782,8 @@
                 </div>
             </div>
             <div>
-                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal" id="i4i2a9van_0">
+                <a href="#callbackwidget" class="link-universal link-universal--u-i4i2a9van btn-in-modal"
+                    id="i4i2a9van_0">
                     <div class="text text--u-i9zqfyxaz" id="i9zqfyxaz_0">
                         <span class="text-block-wrap-div">Забронировать</span>
                     </div>
